updates to my portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,10 +23,10 @@
 
     /* font size */
     --heading1-size: 3.5rem;
-    --heading2-size: 3rem;
-    --heading3-size: 2.5rem;
-    --heading4-size: 2rem;
-    --heading5-size: 1.5rem;
+    --heading2-size: 2.5rem;
+    --heading3-size: 2rem;
+    --heading4-size: 1.5rem;
+    --heading5-size: 1rem;
    
     --text-xs: 0.8rem;
     --text-sm: 1rem;
@@ -44,6 +44,7 @@
 
 html {
     scroll-behavior: smooth;
+    background-color: #fbfbfb;
 }
 
 .center {
@@ -59,7 +60,7 @@ body {
     }
 
 main {
-    padding-top: 192px;
+    padding-top: 148px;
 }
 
 header {
@@ -77,6 +78,7 @@ background-color: transparent;
 background-repeat: no-repeat;
 background-size: cover;
 border-top: solid 1px var(--surface-color);
+/* padding-bottom: 32px; */
 }
 
 
@@ -99,12 +101,15 @@ h1 {
 h2 {
     font-size: var(--heading2-size);
     font-weight: 700;
+    margin-top: 0;
 }
+
+
 
 h3 {
     font-size: var(--heading3-size);
     font-weight: 700;
-    margin: 0 0 32px 0;
+    margin: 0 0 16px 0;
 }
 
 .grid-skills div h3 {
@@ -125,12 +130,13 @@ h5 {
 }
 
 .h1-project {
-    margin-bottom: 0;
+    margin-bottom: 8px;
+    line-height: 1;
 }
 
 .subtitle {
   color: hsl(0 0% 0% / 0.7);
-  font-size: 2rem;
+  font-size: var(--text-lg);
   font-weight: 400;
   opacity: 0;
   transform: translateY(3rem);
@@ -160,8 +166,13 @@ h5 {
 
 p {
     margin: 0;
-    padding-bottom: 16px;
+    padding-bottom: 32px;
     font-weight: 200;
+    font-size: var(--radius-sm);
+}
+
+.li-shadow p {
+    padding-bottom: 0;
 }
 
 .hero p {
@@ -174,7 +185,7 @@ p {
     width: 300px;
 }
 
-strong{
+strong {
     font-weight:bold;
    }
 
@@ -188,8 +199,10 @@ strong{
 
 .text-xs {
     font-size: var(--text-xs);
+    font-weight: 700;
     color: var(--text-color-gray);
     padding: 0;
+    text-transform: uppercase;
 }
 
 .text-sm {
@@ -201,6 +214,8 @@ strong{
     font-weight: 700;
 }
 
+
+
 .intro {
     font-size: var(--text-lg);
     margin: 0 0 64px 0;
@@ -208,8 +223,27 @@ strong{
 
 }
 
+.intro2 {
+    font-size: var(--text-lg);
+    margin: 0 0 64px 0;
+    max-width: 328px;
+
+}
+.hero2 {
+    --column-count: 1;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    gap: 24px;
+    align-items: center;
+    padding-bottom: 64px;
+    
+  
+}
+
 .img-other {
-    width: 100%;
+    width: auto;
+    border-radius: var(--radius-xs, 2rem);
+    /* border: 2px solid var(--accent-color); */
     height: auto;
     margin: 0 auto;
 }
@@ -219,6 +253,13 @@ strong{
     width: 100%;
     border-radius: var(--radius-xs, 2rem);
     border: 2px solid var(--accent-color);
+}
+
+.img-style:hover {
+    width: 100%;
+    border-radius: var(--radius-xs, 2rem);
+    border: none;
+    transform: scale(1.1);
 }
 
 .img-gallery {
@@ -233,23 +274,18 @@ max-width: 99.9%;
 }
 
 
-img:hover {
-    filter: grayscale(100%);
-}
-
-.img-other:hover {
-    filter: none;
-}
 
 .img-gallery:hover {
     filter: none;
-    transform:scale(2);
+    transform:scale(1.3);
     border: none;
 }
 
+
+
 .logo {
     display: inline-block;
-    max-width: 150px;
+    max-width: 250px;
     height: auto;
     border: none;
     
@@ -311,6 +347,13 @@ a:active {
 
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
 .btn-primary-normal {
     display: inline-block;
     background-color: var(--accent-color);
@@ -321,6 +364,7 @@ a:active {
     border-radius: var(--radius-round);
     transition: 0.2s opacity;
     font-weight: 400;
+    font-size: var(--text-sm);
 }
 
 .btn-primary-normal:hover {
@@ -346,6 +390,7 @@ a:active {
     border: 1px solid var(--accent-color);
     border-radius: var(--radius-round);
     transition: 0.2s opacity;
+    font-size: var(--text-sm);
 
 }
 
@@ -362,6 +407,7 @@ a:active {
     text-decoration: solid 1px var(--accent-color);
     color: var(--accent-color);
     text-align: center;
+    text-decoration: none;
     padding: 1em 2em;
     
 
@@ -413,11 +459,11 @@ a:active {
 
 
 #video {
-  position: relative;
-  top: -44px;
-    max-width: 60%;
-    height: auto;
-    border-radius: var(--radius-md);
+  /* position: relative;
+  top: -44px; */
+    max-width: 100%;
+    height: 50%;
+    /* border-radius: var(--radius-md); */
       }
 
 
@@ -426,7 +472,7 @@ a:active {
 }
 
 .text-footer {
-    padding: 1.5rem 0;
+    padding: 16px 0;
     font-size: var(--text-sm);
 }
 
@@ -434,31 +480,38 @@ a:active {
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
-    padding: 4rem 0;
+    /* padding: 64px 0 0 0; */
     
       
 }
 .li-shadow {
     border-bottom: 1px solid var(--text-color-gray);
-    padding: 2rem 0;
+    padding: 1.5rem 0;
+}
+
+.li-shadow > h2 {
+    margin-top: 40px;
 }
 
 #additional-text {
     background-color: var(--accent-color);
     color: var(--pure-white-color);
-    padding: 64px 48px 58px 64px;
+    padding: 58px 48px 58px 64px;
     max-width: 587px;
     height: auto;
     position: relative;
     top: -100px;
-    left: 360px; 
-    border-radius: var(--radius-sm);
+    left: 100px; 
+    border-radius: var(--radius-sm); 
 
 }
 
-#work-section, #testimonial-section {
-    padding-bottom: 112px;
+#additional-text p {
+    font-size: var(--text-lg);
+        padding-bottom: 0;
 }
+
+
 
 .box {
     border-radius: var(--radius-xs, 2rem);
@@ -526,38 +579,42 @@ a:active {
     padding: 0 0 30px;
   }
 
+  .hero_gradientText {
+    background-image: linear-gradient(90deg,#6e48ff 0,#cf40ff 48%,#ffa22c);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    
+}
+
 
 /* Layput styling */
 
 .container {
+    padding: 32px 32px;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.container-nav {
     padding: 0 32px;
-    max-width: 1040px;
+    max-width: 1280px;
     margin: 0 auto;
 }
 
 
 .card-container {
         margin: 0 0 32px 0;
+        border-bottom: 1px solid var(--surface-color);
 }
 
 .card-content {
     padding: 16px 8px 0 8px;
 }
 
-/* .card-basic {
-    background-color: var(--surface-color);
-    padding: 16px;
-    border-radius: var(--radius-xs);
-    box-shadow: -2px 2px 16px -8px #00000035;
-}
 
-.card-basic-1 {
-    background-color: var(--accent-hover-color);
-    color: var(--pure-white-color);
-    padding: 16px;
-    border-radius: var(--radius-xs);
-    box-shadow: -2px 2px 16px -8px #00000035;
-} */
 
 .card-basic-2 {
     background-color: var(--text-color);
@@ -567,13 +624,6 @@ a:active {
     box-shadow: -2px 2px 16px -8px #00000035;
 }
 
-/* .card-basic-3 {
-    background-color: var(--pure-white-color);
-    color: var(--text-color);
-    padding: 16px;
-    border-radius: var(--radius-xs);
-    box-shadow: -2px 2px 16px -8px #00000035;
-} */
 
 .flex-container {
     display: flex;
@@ -614,25 +664,63 @@ a:active {
     gap: 24px;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-bottom: 112px;
-    background-color: #FFFFFF;
+    align-items: stretch;
+    justify-content: space-between;
+    padding-bottom: 64px;
+    
   
 }
 
-.flex-badge {
+.center-img-container {
     display: flex;
-    gap: 4px;
-    font-size: var(--text-xs);
-    padding-bottom: 32px;
-}
+    justify-content: center;
+    align-items: center;
+    /* height: 100vh;  */
+  }
+
+.flex-item {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: space-between;
+  }
+
+.item {
+    flex: 1;
+    min-width: calc(33.33% - 24px);
+    padding: 32px;
+    color: var(--pure-white-color);
+    text-align: left;
+    background-color: var(--text-color);
+    border-radius: var(--radius-xs);
+    
+  }
+
+  .flex-item-border {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: space-between;
+  }
+
+.item-border {
+    flex: 1;
+    min-width: calc(33.33% - 24px);
+    padding: 32px;
+    color: var(--text-color);
+    text-align: left;
+    border: 1px solid var(--text-color-gray);
+    border-radius: var(--radius-xs);
+    
+  }
 
 
 .grid-container {
     --column-count: 1;
     display: grid;
-    gap: 1rem 1rem;
+    gap: 3rem 3rem;
     grid-template-columns: repeat(var(--column-count), 1fr);
-    margin-bottom: 192px;
+    margin-bottom: 32px;
     
     
 }
@@ -642,7 +730,8 @@ a:active {
     display: grid;
     gap: 3rem 3rem;
     grid-template-columns: repeat(var(--column-count), 1fr);
-    padding: 24px 0 32px 0;
+    padding: 64px 0;
+    align-items: start;
     
     
 }
@@ -652,31 +741,36 @@ a:active {
     display: grid;
     gap: 3rem 3rem;
     grid-template-columns: repeat(var(--column-count), 1fr);
-    /* padding: 24px 0 64px 0; */
+    
+    padding: 32px 0;
     
     
 }
+
 
 .grid-skills {
     --column-count: 2;
     display: grid;
     grid-template-columns: repeat(var(--column-count), 1fr);
        /* grid-template-columns: 40% 60%; */
-       padding-bottom: 112px;
+       padding-bottom: 48px;
+       align-items: start;
 }
 
 .grid-gallery {
         display: grid;
             grid-template-columns: repeat(4, 1fr);
-    background: linear-gradient(191deg, #020202 3.98%, #000 28.37%, #212123 53.81%, #014DB2 79.76%);
+    /* background: linear-gradient(191deg, #020202 3.98%, #000 28.37%, #212123 53.81%, #014DB2 79.76%); */
     gap: 1.5rem;
+    padding: 64px 0;
+    border-radius: var(--radius-md);
    
         
 }
 
 .vertical-menu {
         position: relative;
-    top: 80px;
+    top: 60px;
 }
 
 
@@ -710,14 +804,7 @@ a:active {
     margin: 32px 0 0px 0;
 }
 
-.badge {
-      border-radius: var(--radius-round);
-   color: var(--pure-white-color);
-   background-color: var(--text-color-gray);
-   padding: 4px 16px;
-   margin: 4px 2px;
-   font-size: var(--text-xs);
-      }
+
 
   
 
@@ -725,11 +812,15 @@ a:active {
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 16px 0 32px 0;
+    padding: 32px 0 0 0;
     color: var(--pure-white-color);
 }
 
 .grid-container > h2 {
+    margin-top: 0;
+}
+
+.grid-container-2 > h2 {
     margin-top: 0;
 }
 
@@ -744,16 +835,20 @@ div > ul {
     padding: 0; 
 }
 
-
+.grid-skills ul {
+    margin-top: 0;
+}
 
 nav > ul > li > a {
     padding: 0 1rem;
+    font-size: var(--text-sm);
     text-transform: uppercase;
     font-weight: 700;
     color: var(--text-color)
 }
 
 nav > ul > li > a:hover {
+    font-size: var(--text-sm);
     color: var(--accent-hover-color);
     text-decoration: none;
 }
@@ -787,7 +882,7 @@ nav > ul > li > a:active {
 
 .full-width {
     background-color: var(--surface-color);
-    padding: 32px 0;
+    /* padding: 32px 0; */
     
 }
 
@@ -810,93 +905,20 @@ Accordion
 ==============================*/
 
 
-  .content {
-    max-width: calc(100vw - 20px);
-    margin: 0 auto 150px;
-  }
-  .accordion {
-    max-width: 1040px;
-            /* margin: 50px auto; */
-    display: grid;
-    grid-gap: 15px;
-    margin-bottom: 64px;
-  }
-  .accordion__block-title {
-    font-weight: bold;
-    font-size: 14px;
-    color: #424242;
-    text-transform: uppercase;
-  }
-  .accordion__item {
-    display: block;
-    padding: 20px 0;
-    cursor: pointer;
-    /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1); */
-    /* border-radius: 10px; */
-    overflow: hidden;
-    transition: all 150ms ease;
-    
-    &:not(:last-child) {
-      border-bottom: 1px solid var(--text-color-gray);
-    }
-  }
-  .accordion__title {
-    font-size: 16px;
-    line-height: 1.5;
-    transition: all 150ms ease;
-    position: relative;
-    padding-right: 30px;
-    
-    &::after, &::before {
-      content: '';
-      width: 16px;
-      height: 2px;
-      background-color: var(--accent-color);
-      position: absolute;
-      right: 0;
-      top: 8px;
-      transition: all 150ms ease;
-    }
-    
-    &::after {
-      transform: rotate(90deg);
-    }
-  }
-  .accordion__content {
-    transform: translateY(50%);
-    /* color: #999;
-    font-size: 16px;
-    line-height: 1.5; */
-    max-height: 0;
-    opacity: 0;
-    transition: all 250ms ease;
-  }
-  .accordion__item {
-    [type=checkbox], [type=radio] {
-      display: none;
-    }
-    
-    [type=radio]:checked, [type=checkbox]:checked {
-      & + .accordion__title {
-        margin-bottom: 10px;
-        font-size: 20px;
-        
-        &::after {
-          transform: rotate(45deg);
-        }
-        
-        &::before {
-          transform: rotate(-45deg);
-        }
-        
-        & + .accordion__content {
-          transform: translateY(0);
-          max-height: none;
-          opacity: 1;
-        }
-      }
-    }
-  }
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ============================== 
@@ -953,7 +975,7 @@ Cookie Banner
 Animation 
 ==============================*/
 
-#pen {
+/* #pen {
     animation-duration: 3s;
     animation-name: pen;
     animation-iteration-count: infinite;
@@ -1022,7 +1044,7 @@ transform: scale(1);
 transform: scale(1.5);
     }
  
-}
+} */
 
 
 
@@ -1044,7 +1066,7 @@ Small devices (360px and larger)
     } 
 
     svg {
-        width: 100%;
+        width: 40%;
     }
 
     .grid-skills {
@@ -1055,7 +1077,19 @@ Small devices (360px and larger)
     --count-column:1;
         }
 
+        .hero2 {
+                        grid-template-columns: 1fr;
+                    
+        }
+
+        .item {
+            min-width: 100%;
+
        }
+
+       .item-border {
+        min-width: 100%;
+    }
 
 
 
@@ -1073,6 +1107,7 @@ Medium devices (640px and larger)
     header {
         text-align: left;
         padding: 20px 0 13px;
+        background-color:  #fbfbfb;
     }
 
     nav {
@@ -1096,17 +1131,24 @@ Medium devices (640px and larger)
 
     .grid-skills {
         --column-count: 2;
-    }
+    }link
 
     .grid-gallery {
         --count-column: 4;
             }
 
+            .hero2 {
+                
+                grid-template-columns: 60% 40%;
+                        
+            }
+
     svg {
-        width: 200%;
-        position: relative;
-        top: -2rem;
-        left: 4rem;
+        width: 100%;
+        /* position: relative;
+        top: 4rem; 
+        left: 30rem;  */
+        
 
     }
 .logo {
@@ -1131,7 +1173,13 @@ nav > ul > li {
   nav > ul {
     margin: 1em 0;
   }
-    
+  .item {
+    min-width: calc(30% - 24px);
+  }
+
+  .item-border {
+    min-width: calc(30% - 24px);
+  }
 }
 
 /* ==============================
@@ -1155,7 +1203,8 @@ Large devices (1024px or larger)
         grid-column: span 3;
     }
 
-
+    
+    }
    
 }
 
@@ -1165,11 +1214,13 @@ X-large devices (1440px or larger)
 ================================= */
 @media only screen and (min-width: 1440px) {
 
-    
-}
+    .navtoggle.responsive nav{
+        padding: 0px 0 0;
+        }
+        
+        .navtoggle.responsive li {
+        padding: 0px 0;
+        }
 
-/* ==============================
-Extra-large devices (1920px or larger)
-================================= */
-@media only screen and (min-width: 1920px) {
-}
+        
+    }
