changing layout of index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,6 +133,9 @@ h5 {
     margin-bottom: 8px;
     line-height: 1;
 }
+.grid-container-2 h1 {
+    margin: 0;
+}
 
 .subtitle {
   color: hsl(0 0% 0% / 0.7);
