--- a/css/styles.css
+++ b/css/styles.css
@@ -557,6 +557,11 @@ a:active {
     color: var(--pure-white-color);
   }
 
+  .box-5 {
+    background-color: #F3F5FA;
+    color: var(--text-color);
+  }
+
   div#box-4 a {
     color: white;
   }
@@ -910,6 +915,22 @@ nav > ul > li > a:active {
     background-color: var(--surface-color);
     /* padding: 32px 0; */
     
+}
+
+.full-width-blue {
+    background-color: #284BA1;
+       
+}
+.full-width-blue > .container > .grid-container-2 > h2, h3 {
+    color: var(--pure-white-color);
+}
+
+.full-width-blue > .container > .grid-container-2 > p {
+    color: var(--pure-white-color);
+}
+
+.full-width-blue > .container > .grid-container-2 > div > p {
+    color: var(--pure-white-color);
 }
 
 .full-width-frame {
