--- a/css/styles.css
+++ b/css/styles.css
@@ -1078,6 +1078,7 @@ Small devices (360px and larger)
 
     .grid-gallery {
     --count-column:1;
+    gap:8px;
         }
 
         .hero2 {
@@ -1147,6 +1148,7 @@ Medium devices (640px and larger)
 
     .grid-gallery {
         --count-column: 4;
+        gap: 1.5rem;
             }
 
             .hero2 {
