--- a/css/styles.css
+++ b/css/styles.css
@@ -1006,55 +1006,112 @@ background-position: center;
 
   
 
-
 /* ============================== 
-Cookie Banner
+Before After Slider
 ==============================*/
 
-.cookies-eu-banner {
-    background: #444;
-    color: #fff;
-    padding: 6px;
-    font-size: 13px;
-    text-align: center;
-    position: fixed;
-    bottom: 0;
+/* html {
+    box-sizing: border-box;
+  } */
+  
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
+  
+  /* body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  } */
+  
+  .container-2 {
+    position: relative;
+    width: 900px;
+    height: 600px;
+    border: 2px solid white;
+    /* margin: 0;
+    height: 100vh; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container-2 .img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    z-index: 10;
+    height: 100%;
+    background-size: 900px 100%;
   }
-  
-  .cookies-eu-banner button {
-    text-decoration: none;
-    background: var(--text-color);
-    color: var(--pure-white-color);
-    border: 1px solid #000;
-    border-radius: var(--radius-sm);
+  .container-2 .background-img {
+    background-image: url("../img/viaeurasia/poi-after.png");
+  }
+  .container-2 .foreground-img {
+    background-image: url("../img/viaeurasia/poi-before.png");
+    width: 50%;
+  }
+  .container-2 .slider {
+    position: absolute;
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 100%;
+    background: rgba(242, 242, 242, 0.3);
+    outline: none;
+    margin: 0;
+    transition: all 0.2s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .container-2 .slider:hover {
+    background: rgba(242, 242, 242, 0.1);
+  }
+  .container-2 .slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 6px;
+    height: 600px;
+    background: white;
     cursor: pointer;
-    padding: 8px 12px;
-    margin: 2px 0;
-    font-size: var(--text-xs);
-    font-weight: 700;
-    transition: background 0.07s, color 0.07s, border-color 0.07s;
   }
-  
-  .cookies-eu-banner button:hover {
-    background: #fff;
-    color: #222;
+  .container-2 .slider::-moz-range-thumb {
+    width: 6px;
+    height: 600px;
+    background: white;
+    cursor: pointer;
   }
-  
-  .hidden {
-    display: none;
+  .container-2 .slider-button {
+    pointer-events: none;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: white;
+    left: calc(50% - 18px);
+    top: calc(50% - 18px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-
-  #cookie-link {
-    color: var(--accent-color-light);
-    padding-right: 16px;
+  .container-2 .slider-button:after {
+    content: "";
+    padding: 3px;
+    display: inline-block;
+    border: solid #5D5D5D;
+    border-width: 0 2px 2px 0;
+    transform: rotate(-45deg);
   }
-
-  #cookie-link:hover {
-    color: var(--pure-white-color);
+  .container-2 .slider-button:before {
+    content: "";
+    padding: 3px;
+    display: inline-block;
+    border: solid #5D5D5D;
+    border-width: 0 2px 2px 0;
+    transform: rotate(135deg);
   }
-
 
 
 
