--- a/css/styles.css
+++ b/css/styles.css
@@ -1212,6 +1212,10 @@ Small devices (360px and larger)
     .container-2 {
         display: none;
     }
+
+    .flex-item {
+        flex-direction: column;
+    }
        
 }
 
@@ -1315,6 +1319,10 @@ nav > ul > li {
 
 .container-2 {
     display: flex;
+}
+
+.flex-item {
+    flex-direction: row;
 }
 
 }
