--- a/css/styles.css
+++ b/css/styles.css
@@ -260,32 +260,34 @@ strong {
     width: 100%;
     border-radius: var(--radius-xs, 2rem);
     border: 2px solid var(--accent-color);
+    transition: width 1s, height 1s, transform 1s;
 }
 
 .img-style:hover {
     width: 100%;
     border-radius: var(--radius-xs, 2rem);
     border: none;
-    transform: scale(1.1);
+    transform: scale(1.2);
+    transition-timing-function: ease 2s;
 }
 
 .img-gallery {
     width: 100%;
     border-radius: var(--radius-xs, 2rem);
     border: 2px solid var(--accent-color);
+    transition: width 1s, height 1s, transform 1s;
 
+}
+
+.img-gallery:hover {
+    filter: none;
+    transform:scale(1.7);
+    border: none;
+    transition-timing-function: ease 1s;
 }
 
 .hero img {
 max-width: 99.9%;
-}
-
-
-
-.img-gallery:hover {
-    filter: none;
-    transform:scale(1.3);
-    border: none;
 }
 
 
@@ -363,7 +365,9 @@ a:active {
 
 .btn-primary-normal {
     display: inline-block;
-    background-color: var(--accent-color);
+    background: rgb(0,0,0);
+background: linear-gradient(45deg, rgba(0,0,0,1) 0%, rgba(91,22,95,1) 60%, rgba(131,46,136,1) 100%);
+    /* background-color: var(--accent-color); */
     color: var(--pure-white-color);
     text-align: center;
     padding: 1rem 2rem;
@@ -433,10 +437,12 @@ a:active {
 
 
 .container-stats {
-    background-color: var(--accent-color);
+    /* background-color: var(--accent-color); */
+    background: rgb(0,0,0);
+    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(91,22,95,1) 60%, rgba(131,46,136,1) 100%);
     width: 100%;
     text-align: center;
-    margin: 64px 0 112px 0; 
+    padding: 64px 0; 
 }
 
 .container-stats-hero {
@@ -452,10 +458,12 @@ a:active {
 }
 
 .stats {
+    color: var(--surface-color);
     text-align: center;
     display: inline-block;
     padding: 0 3rem;
 }
+
 
 .stats-hero {
     text-align: left;
@@ -854,7 +862,8 @@ div > .item-border {
     flex-wrap: wrap;
     justify-content: center;
     padding: 32px 0 0 0;
-    color: var(--pure-white-color);
+    /* color: var(--pure-white-color); */
+
 }
 
 .statistic-2 {
@@ -1004,6 +1013,15 @@ opacity: 0.5 ;
 /* background-size: cover;
 background-repeat: no-repeat;
 background-position: center; */
+}
+
+#full-width-banner-7 {
+padding: 44px 0;
+text-align: center;
+background-image: url(../img/aae-web/aae-banner.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
 }
 
 .responsive-image {
