--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ border-top: solid 1px var(--surface-color);
 
 
 
-h1,
+
 h2,
 h3,
 h4,
@@ -95,6 +95,7 @@ h5 {
 h1 {
     font-size: var(--heading1-size);
     font-weight: 900;
+    line-height: 1.1;
 }
 
 
@@ -245,6 +246,10 @@ strong {
     padding-bottom: 64px;
     
   
+}
+
+.hero-home {
+    display: flex;
 }
 
 .img-other {
@@ -1260,6 +1265,10 @@ Small devices (360px and larger)
     .flex-item-border {
         flex-direction: column;
     }
+
+    #me {
+    display: none;
+    }
        
 }
 
@@ -1372,6 +1381,13 @@ nav > ul > li {
 .flex-item-border {
     flex-direction: row;
 }
+
+#me {
+ display: block;
+ position: relative;
+ bottom: 60px;
+  
+    }
 
 }
 
